==> DiazGopar/ble_chrono_drimiun/VL53L0X.cpp <==
#include "VL53L0X.h"
#include <stdbool.h>
#include <stdint.h>
#include "app_error.h"
#include "app_timer.h"
#include "nrf_drv_clock.h"
#include <stdio.h>
#include "boards.h"
#include "app_util_platform.h"
#include "nrf_drv_twi.h"
#include "nrf_delay.h"
#include "nrf_gpio.h"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_log_default_backends.h"
#define ADDRESS_SENSOR (0x52U >> 1)//peter last bit wil be set with read or write
#define decodeVcselPeriod(reg_val)      (((reg_val) + 1) << 1)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define TWI_INSTANCE_ID     0

bool VL53L0X::init(bool io_2v8)
{

  // check model ID register (value specified in datasheet)
   if (readReg(IDENTIFICATION_MODEL_ID) != 0xEE) { return false; }

  // VL53L0X_DataInit() begin

  // sensor uses 1V8 mode for I/O by default; switch to 2V8 mode if necessary
  if (io_2v8)
  {
    writeReg(VHV_CONFIG_PAD_SCL_SDA__EXTSUP_HV,
      readReg(VHV_CONFIG_PAD_SCL_SDA__EXTSUP_HV) | 0x01); // set bit 0
  }

  // "Set I2C standard mode"
  writeReg(0x88, 0x00);
  
  writeReg(0x80, 0x01);//programma loopt vast!!!!!!!!!!!!!!!!!!!!!!
  writeReg(0xFF, 0x01);
  writeReg(0x00, 0x00);
  stop_variable = readReg(0x91);
  writeReg(0x00, 0x01);
  writeReg(0xFF, 0x00);
  writeReg(0x80, 0x00);

  // disable SIGNAL_RATE_MSRC (bit 1) and SIGNAL_RATE_PRE_RANGE (bit 4) limit checks
  writeReg(MSRC_CONFIG_CONTROL, readReg(MSRC_CONFIG_CONTROL) | 0x12);

  // set final range signal rate limit to 0.25 MCPS (million counts per second)
  setSignalRateLimit(0.25);

  writeReg(SYSTEM_SEQUENCE_CONFIG, 0xFF);

  // VL53L0X_DataInit() end

  // VL53L0X_StaticInit() begin

  uint8_t spad_count;
  bool spad_type_is_aperture;
  if (!getSpadInfo(&spad_count, &spad_type_is_aperture)) { return false; }

  // The SPAD map (RefGoodSpadMap) is read by VL53L0X_get_info_from_device() in
  // the API, but the same data seems to be more easily readable from
  // GLOBAL_CONFIG_SPAD_ENABLES_REF_0 through _6, so read it from there
  uint8_t ref_spad_map[6];
  readMulti(GLOBAL_CONFIG_SPAD_ENABLES_REF_0, ref_spad_map, 6);

  // -- VL53L0X_set_reference_spads() begin (assume NVM values are valid)

  writeReg(0xFF, 0x01);
  writeReg(DYNAMIC_SPAD_REF_EN_START_OFFSET, 0x00);
  writeReg(DYNAMIC_SPAD_NUM_REQUESTED_REF_SPAD, 0x2C);
  writeReg(0xFF, 0x00);
  writeReg(GLOBAL_CONFIG_REF_EN_START_SELECT, 0xB4);

  uint8_t first_spad_to_enable = spad_type_is_aperture ? 12 : 0; // 12 is the first aperture spad
  uint8_t spads_enabled = 0;

  for (uint8_t i = 0; i < 48; i++)
  {
    if (i < first_spad_to_enable || spads_enabled == spad_count)
    {
      // This bit is lower than the first one that should be enabled, or
      // (reference_spad_count) bits have already been enabled, so zero this bit
      ref_spad_map[i / 8] &= ~(1 << (i % 8));
    }
    else if ((ref_spad_map[i / 8] >> (i % 8)) & 0x1)
    {
      spads_enabled++;
    }
  }

  writeMulti( GLOBAL_CONFIG_SPAD_ENABLES_REF_0, ref_spad_map, 6);

  // -- VL53L0X_set_reference_spads() end

  // -- VL53L0X_load_tuning_settings() begin
  // DefaultTuningSettings from vl53l0x_tuning.h

  writeReg(0xFF, 0x01);
  writeReg(0x00, 0x00);

  writeReg(0xFF, 0x00);
  writeReg(0x09, 0x00);
  writeReg(0x10, 0x00);
  writeReg(0x11, 0x00);

  writeReg(0x24, 0x01);
  writeReg(0x25, 0xFF);
  writeReg(0x75, 0x00);

  writeReg(0xFF, 0x01);
  writeReg(0x4E, 0x2C);
  writeReg(0x48, 0x00);
  writeReg(0x30, 0x20);

  writeReg(0xFF, 0x00);
  writeReg(0x30, 0x09);
  writeReg(0x54, 0x00);
  writeReg(0x31, 0x04);
  writeReg(0x32, 0x03);
  writeReg(0x40, 0x83);
  writeReg(0x46, 0x25);
  writeReg(0x60, 0x00);
  writeReg(0x27, 0x00);
  writeReg(0x50, 0x06);
  writeReg(0x51, 0x00);
  writeReg(0x52, 0x96);
  writeReg(0x56, 0x08);
  writeReg(0x57, 0x30);
  writeReg(0x61, 0x00);
  writeReg(0x62, 0x00);
  writeReg(0x64, 0x00);
  writeReg(0x65, 0x00);
  writeReg(0x66, 0xA0);

  writeReg(0xFF, 0x01);
  writeReg(0x22, 0x32);
  writeReg(0x47, 0x14);
  writeReg(0x49, 0xFF);
  writeReg(0x4A, 0x00);

  writeReg(0xFF, 0x00);
  writeReg(0x7A, 0x0A);
  writeReg(0x7B, 0x00);
  writeReg(0x78, 0x21);

  writeReg(0xFF, 0x01);
  writeReg(0x23, 0x34);
  writeReg(0x42, 0x00);
  writeReg(0x44, 0xFF);
  writeReg(0x45, 0x26);
  writeReg(0x46, 0x05);
  writeReg(0x40, 0x40);
  writeReg(0x0E, 0x06);
  writeReg(0x20, 0x1A);
  writeReg(0x43, 0x40);

  writeReg(0xFF, 0x00);
  writeReg(0x34, 0x03);
  writeReg(0x35, 0x44);

  writeReg(0xFF, 0x01);
  writeReg(0x31, 0x04);
  writeReg(0x4B, 0x09);
  writeReg(0x4C, 0x05);
  writeReg(0x4D, 0x04);

  writeReg(0xFF, 0x00);
  writeReg(0x44, 0x00);
  writeReg(0x45, 0x20);
  writeReg(0x47, 0x08);
  writeReg(0x48, 0x28);
  writeReg(0x67, 0x00);
  writeReg(0x70, 0x04);
  writeReg(0x71, 0x01);
  writeReg(0x72, 0xFE);
  writeReg(0x76, 0x00);
  writeReg(0x77, 0x00);

  writeReg(0xFF, 0x01);
  writeReg(0x0D, 0x01);

  writeReg(0xFF, 0x00);
  writeReg(0x80, 0x01);
  writeReg(0x01, 0xF8);

  writeReg(0xFF, 0x01);
  writeReg(0x8E, 0x01);
  writeReg(0x00, 0x01);
  writeReg(0xFF, 0x00);
  writeReg(0x80, 0x00);

  // -- VL53L0X_load_tuning_settings() end

  // "Set interrupt config to new sample ready"
  // -- VL53L0X_SetGpioConfig() begin

  writeReg(SYSTEM_INTERRUPT_CONFIG_GPIO, 0x04);
  writeReg(GPIO_HV_MUX_ACTIVE_HIGH, readReg(GPIO_HV_MUX_ACTIVE_HIGH) & ~0x10); // active low
  writeReg(SYSTEM_INTERRUPT_CLEAR, 0x01);

  // -- VL53L0X_SetGpioConfig() end

  measurement_timing_budget_us = getMeasurementTimingBudget();

  // "Disable MSRC and TCC by default"
  // MSRC = Minimum Signal Rate Check
  // TCC = Target CentreCheck
  // -- VL53L0X_SetSequenceStepEnable() begin

  writeReg(SYSTEM_SEQUENCE_CONFIG, 0xE8);

  // -- VL53L0X_SetSequenceStepEnable() end

  // "Recalculate timing budget"
  setMeasurementTimingBudget(measurement_timing_budget_us);

  // VL53L0X_StaticInit() end

  // VL53L0X_PerformRefCalibration() begin (VL53L0X_perform_ref_calibration())

  // -- VL53L0X_perform_vhv_calibration() begin

  writeReg(SYSTEM_SEQUENCE_CONFIG, 0x01);
  if (!performSingleRefCalibration(0x40)) { return false; }

  // -- VL53L0X_perform_vhv_calibration() end

  // -- VL53L0X_perform_phase_calibration() begin

  writeReg(SYSTEM_SEQUENCE_CONFIG, 0x02);
  if (!performSingleRefCalibration(0x00)) { return false; }

  // -- VL53L0X_perform_phase_calibration() end

  // "restore the previous Sequence Config"
  writeReg(SYSTEM_SEQUENCE_CONFIG, 0xE8);

  // VL53L0X_PerformRefCalibration() end

  return true;
}

void VL53L0X::writeReg(uint8_t regist, uint8_t value)
{
    uint8_t reg[2] = {regist, value};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

void VL53L0X::writeReg16Bit(uint8_t regist, uint16_t value)
{
    uint8_t reg[3] = {regist, (value >> 8) & 0xFF,value & 0xFF};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

void VL53L0X::writeReg32Bit(uint8_t regist, uint32_t value)
{

    uint8_t reg[5] = {regist, (value >> 24) & 0xFF, (value >> 16) & 0xFF, (value >> 8) & 0xFF,value & 0xFF};

    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

uint8_t VL53L0X::readReg(uint8_t regist)
{
    uint8_t *waarde;
    
    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);

   
    /* Read 1 byte from the specified address  */
    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, &m_sample, 1);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);

   return m_sample;
}

uint16_t VL53L0X::readReg16Bit(uint8_t regist)
{
  uint16_t value;
  uint8_t waarde[2];
  ret_code_t err_code;

    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);

    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, waarde, 2);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);
    value  = (uint16_t)waarde[0] << 8; // value high byte
    value |=           waarde[1];      // value low byte

  return value;
}

uint32_t VL53L0X::readReg32Bit(uint8_t regist)
{
  uint32_t value;
  uint8_t waarde[4];

    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);


    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, waarde, 4);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);
    value  = waarde[3] << 24; // value high byte
    value |= waarde[2] << 16; // value low byte
    value |= waarde[1] << 8;  // value high byte
    value |= waarde[0];       // value low byte


  return value;
}

void VL53L0X::writeMulti(uint8_t regist, uint8_t const * src, uint8_t count)
{
///  Wire.beginTransmission(address);
//  Wire.write(reg);

    uint8_t r[1] ;
    r[0]=regist;
    uint8_t reg[count];
    //reg[0]=regist;
    for(int x=0;x<count;x++)
    {
      reg[x]=*(src++);
    }
    ret_code_t err_code;

    m_xfer_done = false;
    err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, r, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);


    m_xfer_done = false;
    err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, sizeof(reg), false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);
}

void VL53L0X::readMulti(uint8_t regist, uint8_t * dst, uint8_t count)
{

  uint8_t waarde[count];

    uint8_t reg[1] = {regist};
    m_xfer_done = false;
    ret_code_t err_code = nrf_drv_twi_tx(&m_twi, ADDRESS_SENSOR, reg, 1, false);
    APP_ERROR_CHECK(err_code);
    while (m_xfer_done == false);

    m_xfer_done = false;
    err_code = nrf_drv_twi_rx(&m_twi, ADDRESS_SENSOR, waarde,count);
    while(m_xfer_done==false);
    APP_ERROR_CHECK(err_code);

  while (count-- > 0)
  {
    *(dst++) = waarde[count];
  }
}
